@@ -1,3 +1,8 @@
+Wed Jun 25 13:53:02 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/query.py: Allow division of queries by a number (equivalent
+	  to multiplying by 1.0 / number).
+
 Wed Jun 25 13:36:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/query.py: Add &, | and ^ operators for queries.
